// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubNav /> renders base component correctly 1`] = `
<nav
  className="base dark"
>
  <h3
    className="base small dark heading"
  >
    Phasellus aliquet sem
  </h3>
  <ul
    className="base dark"
  >
    <li
      className="item"
    >
      <a
        className="base left dark item"
        href="https://aesop.com/"
        target="_self"
      >
        Morbi id nulla
      </a>
    </li>
    <li
      className="item"
    >
      <a
        className="base left dark item"
        href="https://aesop.com/"
        target="_self"
      >
        Nullam ultrices
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<SubNav /> renders without title if not \`title\` prop is passed 1`] = `
<nav
  className="base dark"
>
  <ul
    className="base dark"
  >
    <li
      className="item"
    >
      <a
        className="base left dark item"
        href="https://aesop.com/"
        target="_self"
      >
        Morbi id nulla
      </a>
    </li>
    <li
      className="item"
    >
      <a
        className="base left dark item"
        href="https://aesop.com/"
        target="_self"
      >
        Nullam ultrices
      </a>
    </li>
  </ul>
</nav>
`;
